TST-673 — Fix menu tabbing on mobile header

--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -206,7 +206,8 @@
 // -----------------------------------------------------------------------------
 
 .mobileMenu-toggle {
-    @include square($header-toggle-width);
+    width: 50px;
+    height: 50px;
     display: inline-block;
     font-size: 0;
     left: 0;
